crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-arrow-partitioned_clickbench_q4_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q4"
---
+---------------+-------------------------------------------------------------------------+
| plan_type     | plan                                                                    |
+---------------+-------------------------------------------------------------------------+
| logical_plan  | Aggregate: groupBy=[[]], aggr=[[avg(CAST(hits.UserID AS Float64))]]     |
|               |   TableScan: hits projection=[UserID]                                   |
| physical_plan | AggregateExec: mode=Final, gby=[], aggr=[avg(hits.UserID)]              |
|               |   CoalescePartitionsExec                                                |
|               |     AggregateExec: mode=Partial, gby=[], aggr=[avg(hits.UserID)]        |
|               |       SchemaCastScanExec                                                |
|               |         PartitionedUnionExec                                            |
|               |           BytesProcessedExec                                            |
|               |             DataSourceExec: partitions=32, partition_sizes=[<redacted>] |
|               |           BytesProcessedExec                                            |
|               |             DataSourceExec: partitions=32, partition_sizes=[<redacted>] |
|               |           BytesProcessedExec                                            |
|               |             DataSourceExec: partitions=32, partition_sizes=[<redacted>] |
|               |           BytesProcessedExec                                            |
|               |             DataSourceExec: partitions=32, partition_sizes=[<redacted>] |
|               |           BytesProcessedExec                                            |
|               |             DataSourceExec: partitions=32, partition_sizes=[<redacted>] |
|               |                                                                         |
+---------------+-------------------------------------------------------------------------+
