crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-arrow-partitioned_clickbench_q8_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q8"
---
+---------------+--------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                   |
+---------------+--------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: count(*) DESC NULLS FIRST                                                                        |
|               |   Projection: hits.AdvEngineID, count(Int64(1)) AS count(*)                                            |
|               |     Aggregate: groupBy=[[hits.AdvEngineID]], aggr=[[count(Int64(1))]]                                  |
|               |       Filter: hits.AdvEngineID != Int16(0)                                                             |
|               |         TableScan: hits projection=[AdvEngineID], partial_filters=[hits.AdvEngineID != Int16(0)]       |
| physical_plan | SortPreservingMergeExec: [count(*)@1 DESC]                                                             |
|               |   ProjectionExec: expr=[AdvEngineID@0 as AdvEngineID, count(Int64(1))@1 as count(*)]                   |
|               |     SortExec: expr=[count(Int64(1))@1 DESC], preserve_partitioning=[true]                              |
|               |       AggregateExec: mode=FinalPartitioned, gby=[AdvEngineID@0 as AdvEngineID], aggr=[count(Int64(1))] |
|               |         RepartitionExec: partitioning=Hash([AdvEngineID@0], 16), input_partitions=80                   |
|               |           AggregateExec: mode=Partial, gby=[AdvEngineID@0 as AdvEngineID], aggr=[count(Int64(1))]      |
|               |             FilterExec: AdvEngineID@0 != 0                                                             |
|               |               SchemaCastScanExec                                                                       |
|               |                 PartitionedUnionExec                                                                   |
|               |                   BytesProcessedExec                                                                   |
|               |                     DataSourceExec: partitions=16, partition_sizes=[<redacted>]                        |
|               |                   BytesProcessedExec                                                                   |
|               |                     DataSourceExec: partitions=16, partition_sizes=[<redacted>]                        |
|               |                   BytesProcessedExec                                                                   |
|               |                     DataSourceExec: partitions=16, partition_sizes=[<redacted>]                        |
|               |                   BytesProcessedExec                                                                   |
|               |                     DataSourceExec: partitions=16, partition_sizes=[<redacted>]                        |
|               |                   BytesProcessedExec                                                                   |
|               |                     DataSourceExec: partitions=16, partition_sizes=[<redacted>]                        |
|               |                                                                                                        |
+---------------+--------------------------------------------------------------------------------------------------------+
